--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     # The type of runner that the job will run on
-    runs-on: windows
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
