--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,4 +20,5 @@ jobs:
       - name: Run a multi-line script
         shell: pwsh
         run: |
-          write-host $psversiontable
+        write-host $psversiontable
+        write-host 'hello world'
