--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,3 +22,4 @@ jobs:
         run: |
           write-host $psversiontable
           write-host 'hello world'
+          write-host 'hello world'
