--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,4 +22,5 @@ jobs:
         run: |
           write-host $psversiontable
           write-host 'hello world'
-          write-host 'hello world'
+          write-host 'hello'
+          Start-Sleep -Second 20
