--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,14 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Run a one-line script
-        run: echo Hello, world!
+        shell: bash
+        run: |
+          sudo apt-get update
+          sudo apt install dirmngr lsb-release ca-certificates software-properties-common apt-transport-https curl -y
+          curl -fSsL https://packages.microsoft.com/keys/microsoft.asc | sudo gpg --dearmor | sudo tee /usr/share/keyrings/powershell.gpg > /dev/null
+          echo "deb [arch=amd64,armhf,arm64 signed-by=/usr/share/keyrings/powershell.gpg] https://packages.microsoft.com/ubuntu/22.04/prod/ jammy main" | sudo tee /etc/apt/sources.list.d/powershell.list
+          sudo apt update
+          sudo apt install powershell
 
       - name: Run a multi-line script
         shell: pwsh
