--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install dependencies
+      - name: Install Linux dependencies
         shell: bash
         run: |
           sudo apt-get update
@@ -23,8 +23,10 @@ jobs:
           sudo apt update
           sudo apt install powershell
 
-      - name: Run tests
+      - name: Run PowerShell dependencies
         shell: pwsh
-        run: |
-          Install-Module Pester, PSScriptAnalyzer -Force -Scope CurrentUser
-          ./TestExecutor.ps1
+        run: Install-Module Pester, PSScriptAnalyzer -Force -Scope CurrentUser
+
+      - name: pester-tests-report
+        uses: zyborg/pester-tests-report@v1.5.0
+      
